{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 761,
  "lineage": "41790e3b-09b1-1218-0e8b-62b88f8edc6f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/firewallPolicies/firewall_policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "centralindia",
            "name": "firewall_policy",
            "private_ip_ranges": null,
            "resource_group_name": "iftest-rg",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "firewall_policies",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "example-application-rule",
                "priority": 500,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": null,
                    "destination_fqdn_tags": null,
                    "destination_fqdns": [
                      "*.google.com",
                      "*.microsoft.com"
                    ],
                    "destination_urls": null,
                    "name": "app_rule",
                    "protocols": [
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "10.6.1.4"
                    ],
                    "source_ip_groups": null,
                    "terminate_tls": false,
                    "web_categories": null
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/firewallPolicies/firewall_policy",
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/firewallPolicies/firewall_policy/ruleCollectionGroups/example-fwpolicy-rcg",
            "name": "example-fwpolicy-rcg",
            "nat_rule_collection": [
              {
                "action": "Dnat",
                "name": "firewall_Nat_rules",
                "priority": 300,
                "rule": [
                  {
                    "destination_address": "4.188.226.99",
                    "destination_ports": [
                      "4001"
                    ],
                    "name": "rdp_access3",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "83.221.156.201"
                    ],
                    "source_ip_groups": null,
                    "translated_address": "10.1.2.6",
                    "translated_fqdn": "",
                    "translated_port": 3389
                  }
                ]
              }
            ],
            "network_rule_collection": [],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.firewall_policy",
            "azurerm_public_ip.fw-pip",
            "azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_public_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "winVM1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/networkInterfaces/winVM1nic",
            "internal_domain_name_suffix": "laaaqj1s5zquhbe1ne2fkvzdgh.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "winVM1ip_config",
                "primary": true,
                "private_ip_address": "10.1.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/publicIPAddresses/winVM1pip",
                "subnet_id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/virtualNetworks/VNetTest/subnets/subnet_2"
              }
            ],
            "location": "centralindia",
            "name": "winVM1nic",
            "private_ip_address": "10.1.2.4",
            "private_ip_addresses": [
              "10.1.2.4"
            ],
            "resource_group_name": "iftest-rg"
          },
          "dependencies": [
            "azurerm_public_ip.vm_public_ip",
            "azurerm_resource_group.vnet_rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/networkSecurityGroups/test",
            "location": "centralindia",
            "name": "test",
            "resource_group_name": "iftest-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allowRDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "83.221.156.201",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/publicIPAddresses/fw_pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.188.226.99",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "fw_pip",
            "resource_group_name": "iftest-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "winVM1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/publicIPAddresses/winVM1pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "winVM1pip",
            "resource_group_name": "iftest-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "firewall_subnet",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/virtualNetworks/VNetTest/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "iftest-rg",
            "virtual_network_name": "VNetTest"
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet_1",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/virtualNetworks/VNetTest/subnets/subnet_1",
            "name": "subnet_1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "iftest-rg",
            "virtual_network_name": "VNetTest"
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/virtualNetworks/VNetTest/subnets/subnet_2",
            "name": "subnet_2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "iftest-rg",
            "virtual_network_name": "VNetTest"
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "subnet_3",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/virtualNetworks/VNetTest/subnets/subnet_3",
            "name": "subnet_3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "iftest-rg",
            "virtual_network_name": "VNetTest"
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "27080058-fe72-4361-849b-693855572337",
            "id": "/subscriptions/39559d00-5c1f-4783-9b0e-6a66d5768506/resourceGroups/iftest-rg/providers/Microsoft.Network/virtualNetworks/VNetTest",
            "location": "centralindia",
            "name": "VNetTest",
            "resource_group_name": "iftest-rg",
            "tags": {
              "Environment": "Lab",
              "Owner": "Sri"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vnet_rg"
          ]
        }
      ]
    }
  ]
}